Sat Dec 13 13:51:33 CET 2008
- improvements and few features in the toolchain:
   - the mirrorprobe now does GET requests instead of HEAD requests.
   - mb, the mirrorbrain tool, has a powerful "probefile" command now that can
     check for existance of a file on all mirrors, probing all URLs. This is
     especially useful for checking whether the permission setup for staged 
     content is correct on all mirrors.
- new database fields: public_notes, operator_name, operator_url
- new database tables: country & region

Sat Dec  6 12:15:13 CET 2008
- generate mirror lists

Sat Nov 22 15:58:46 CET 2008
- release MirrorBrain 2.2:
  - simplified database layout, with additional space save.

Sun Nov  9 15:20:03 CET 2008
- release MirrorBrain 2.1
  - simplified the Apache configuration: It is no longer needed to configure a
    database query. At the same time it's less error-prone and avoids trouble
    if one forgets to update the query, when the database schema changes. 
  - specific mirrors can be now configured to get only requests for files < n bytes

Mon Nov  3 11:04:04 CET 2008
- release MirrorBrain 2.0
  - implement better fallback mirror selection
  - add tool to list/add/rm files in the mirror database

Sun Oct 26 18:07:52 CET 2008
- mod_zrkadlo 1.9:
  - add bittorrent links (to found .torrent files) into metalinks
  - embed PGP signatures (.asc files) into metalinks
  - add configurable CSS stylesheet to mirror lists

Fri Sep 19 21:08:42 CET 2008
 - implement the redirection exceptions (file too small, mime type not allowed
   to be redirected etc) for transparently negotiated metalinks.
 - add Vary header on all transparently negotiated resources.
- new, better implementation of rsyncusers tool
- improved mirrordoctor tool
- bugfixes in the scanner, mainly for scanning via HTML
- installation instructions updated

Fri Aug 22 17:22:14 CEST 2008
- allow to use the apache module and all tools with multiple instances of