@@ -9,18 +9,41 @@ import mb.core
 # ['-rw-r--r--', '4405843968', '2007/09/27', '17:50:25', 'distribution/10.3/iso/dvd/openSUSE-10.3-GM- DVD-i386.iso']
 
 def get_filelist(url):
-    child_stdin, child_stdout, child_stderr = os.popen3(['rsync', '-r', url])
-    #child_stdin, child_stdout, child_stderr = os.popen3(['cat', 'buildservice-repos.txt'])
-    child_stdin.close()
+    import urlparse
+    import subprocess
+
+    print url
+    url = list(urlparse.urlparse(url))
+    if not ':' in url[1]: url[1] += ':873'
+    url = urlparse.urlunparse(url)
+    print url
+    # old
+    ###  child_stdin, child_stdout, child_stderr = os.popen3(['rsync', '-r', url])
+    ###  #child_stdin, child_stdout, child_stderr = os.popen3(['cat', 'buildservice-repos.txt'])
+    ###  child_stdin.close()
+
+    ###  # new
+    ###  p = subprocess.Popen(cmd, shell=True, bufsize=bufsize, stdin=None, stdout=PIPE, stderr=PIPE, close_fds=True)
+    ###  (child_stdin, child_stdout, child_stderr) = (p.stdin, p.stdout, p.stderr)
+
+    # newer
+    o = subprocess.Popen(['rsync', '-r', url], stdout=subprocess.PIPE, stderr=subprocess.STDOUT, close_fds=True).stdout
+    print 'done'
+    #import time
+    #time.sleep(100)
 
     dirCollection = {}
-    for line in child_stdout:
+    ###  for line in child_stdout:
+    for line in o.readlines():
+        print 'a line'
         try:
             mode, size, date, time, name = line.split(None, 4)
         except:
-            print repr(line)
+            # may be the stupid motd
             import sys
-            sys.exit(1)
+            print 'could not parse this line: %s' % repr(line)
+            #sys.exit('could not parse this line:\n%s' % repr(line))
+            continue
         name = name.rstrip()
 
         if mode.startswith('d'):
